--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="num-btn">
-      <label for"First no">Enter the First No.</label>
+      <label for="First no">Enter the First No.</label>
         <input id="num1" type="number" />
-      <label for"Second no">Enter the Second No.</label>
+      <label for="Second no">Enter the Second No.</label>
         <input id="num2" type="number" />
  </div>
  <div class="calc">
